# pynamodb-attributes

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  NOTICE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  test.yaml
pynamodb_attributes/: __init__.py  _typing.py  _typing.pyi  datetime.py  datetime.pyi  enum.py  float.py  float.pyi  integer.py  integer.pyi  integer_date.py  integer_date.pyi  integer_enum.py  integer_enum.pyi  integer_set.py  timedelta.py  timestamp.py  timestamp.pyi  unicode_datetime.py  unicode_delimited_tuple.py  unicode_delimited_tuple.pyi  unicode_enum.py  unicode_enum.pyi  unicode_protobuf_enum.py  uuid.py  uuid.pyi
tests/: conftest.py  connection.py  datetime_attribute_test.py  float_attribute_test.py  integer_attribute_test.py  integer_date_attribute_test.py  integer_enum_attribute_test.py  integer_set_attribute_test.py  meta.py  mypy_helpers.py  mypy_test.py  timedelta_attribute_test.py  timestamp_attribute_test.py  unicode_datetime_attribute_test.py  unicode_delimited_tuple_attribute_test.py  unicode_enum_attribute_test.py  unicode_protobuf_enum_attribute_test.py  uuid_attribute_test.py
