[wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv
max-complexity = 10
max-line-length = 120
ignore = NONE

[tool:pytest]
addopts = --cov=pynamodb_attributes --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
env =
  # We don't need real AWS access in unit tests
  D:AWS_ACCESS_KEY_ID=mock_aws_access_key_id
  D:AWS_SECRET_ACCESS_KEY=mock_aws_secret_access_key


[coverage:run]
branch = True

[coverage:report]
fail_under = 100
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:

[coverage:xml]
output = build/coverage.xml

[coverage:html]
directory = build/coverage_html

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
strict_optional = True
warn_no_return = True
