[wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
format = pylint
max-complexity = 10
max-line-length = 120
ignore = E203

[tool:pytest]
addopts = --cov=pynamodb_attributes --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
env =
  # We don't need real AWS access in unit tests
  D:AWS_ACCESS_KEY_ID=mock_aws_access_key_id
  D:AWS_SECRET_ACCESS_KEY=mock_aws_secret_access_key


[coverage:run]
branch = True

[coverage:report]
fail_under = 100
exclude_lines =
    # the 'DEFAULT_EXCLUDE' from coverage.config:
    \#\s*(pragma|PRAGMA)[:\s]?\s*(no|NO)\s*(cover|COVER)
    # Exclude type-checker-only "code"
    if TYPE_CHECKING:
    # Exclude ellipsis bodies of type-stub functions
    ^\s*\.\.\.\s*$
    # Exclude pytest.fail calls
    pytest\.fail
    # Exclude intentionally unimplemented branches
    raise NotImplementedError

[coverage:xml]
output = build/coverage.xml

[coverage:html]
directory = build/coverage_html

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
ignore_missing_imports = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True

[mypy-tests.*]
disallow_untyped_defs = False
